--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,9 @@ layout: default
       <div class="row center">
         <h5 class="header col s12 light">{{ content }}</h5>
       </div>
-        
+
       <div class="row center">
-        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+        <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">按我報名</a>
       </div>
       <br><br>
 
@@ -26,33 +26,35 @@ layout: default
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">參賽作品</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">以6分鐘以內的短片介紹及分析自選的經濟議題。</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <h5 class="center">獎金</h5>
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light" style="text-align:center">
+              第一名： 八千元（一組）<br>
+              第二名： 五千元（一組）<br>
+              第三名： 三千元（一組）</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
-
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <h5 class="center">迷你課程</h5>
+            <p class="light">配搭「經濟時事與多媒體課程」做中學，拿學分又拿獎金。</p>
           </div>
         </div>
       </div>
 
     </div>
-      
+
     </div>
     <div style="background: #ddd">
     <div class="container last-post">
@@ -70,7 +72,7 @@ layout: default
           <a href="{{ post.url | relative_url }}" class="secondary-content"><i class="material-icons">navigate_next</i></a>
         </li>
         {% endfor %}
-        </ul>  
+        </ul>
     </section>
     </div>
 </div>
