--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
                     {% endif %}
                 {% endfor %}
             {% endif %}
-            <li><a href="https://www.facebook.com/ntpu.econ.podcast.champ.2017/" target="_blank">臉書粉專 </a></li>
+            <li><a href="https://www.facebook.com/{{ site.facebook_pagename | escape }}" target="_blank">臉書粉專 </a></li>
           </ul>
 
           <ul id="nav-mobile" class="side-nav">
@@ -26,7 +26,7 @@
                     {% endif %}
                 {% endfor %}
             {% endif %}
-          <li><a href="https://www.facebook.com/ntpu.econ.podcast.champ.2017/" target="_blank">臉書粉專 </a></li>
+          <li><a href="https://www.facebook.com/{{ site.facebook_pagename | escape }}" target="_blank">臉書粉專 </a></li>
           </ul>
 
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
