--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
       </div>
 
       <div class="row center">
-        <a href="https://goo.gl/forms/vAD1OE9yiONnz5h32" id="download-button" class="btn-large waves-effect waves-light orange" target="_blank">按我報名</a>
+        <a href="{{ site.registrationurl | escape }}" id="download-button" class="btn-large waves-effect waves-light orange" target="_blank">按我報名</a>
       </div>
       <br><br>
 
@@ -28,7 +28,7 @@ layout: default
             <h2 class="center light-blue-text"><i class="material-icons">theaters</i></h2>
             <h5 class="center">參賽作品</h5>
 
-            <p class="center">以6分鐘以內的短片介紹及分析自選的經濟議題。</p>
+            <p class="center">以下主題二手擇一，製作6分鐘以內短片參賽<br>(1)介紹及分析自選經濟議題<br>(2)以高中生為對象介紹本系特色</p>
           </div>
         </div>
 
