--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,8 @@ layout: default
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">school</i></h2>
             <h5 class="center">迷你課程</h5>
-            <p class="light">配搭「經濟時事與多媒體課程」做中學，拿學分又拿獎金。</p>
+            <p class="light">配搭
+              <a href="https://tpemartin.github.io/Multimedia-Publication-of-Economic-Issues/" target="_blank">「經濟時事與多媒體」</a>課程做中學，拿學分又拿獎金。</p>
           </div>
         </div>
       </div>
