更新 影展及投票資訊

--- a/_layouts/_home.html
+++ b/_layouts/_home.html
@@ -11,7 +11,7 @@ layout: default
       </div>
 
       <div class="row center">
-        <a href="{{ site.votingurl | escape }}" id="download-button" class="btn-large waves-effect waves-light orange" target="_blank">點我投票</a>
+        <a href="{{ site.registrationurl | escape }}" id="download-button" class="btn-large waves-effect waves-light orange" target="_blank">按我報名</a>
       </div>
       <br><br>
 
