--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -19,7 +19,7 @@ h1.page-title {
     font-weight: 500;
     font-size: 2.3em;
     text-align: center;
-    color: #29b6f6;
+    color: #0277bd;
 }
 .col.grid-example {
     border: 1px solid #eee;
