--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-  <footer class="page-footer orange">
+  <footer class="page-footer light-blue darken-3">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -20,9 +20,9 @@
     <div class="footer-copyright">
         <div class="container">
             <div>
-                網頁製作 <a target="_blank" class="orange-text text-lighten-3" href={{ site.cohosturl | escape }}>E.Major Taiwan</a>
+                網頁製作 <a target="_blank" class="white-text text-lighten-3" href={{ site.cohosturl | escape }}>E.Major Taiwan</a>
                 <span style="text-align: right; float: right">
-                Copyright © 2017 <a href="http://www.panoramedia.it" class="orange-text text-lighten-3">Marco Damiani</a>. Powered by <a target="_blank" href="http://jekyllrb.com/" class="orange-text text-lighten-3">Jekyll</a>
+                Copyright © 2017 <a href="http://www.panoramedia.it" class="white-text text-lighten-3">Marco Damiani</a>. Powered by <a target="_blank" href="http://jekyllrb.com/" class="white-text text-lighten-3">Jekyll</a>
                 </span>
             </div>
         </div>
