更改首頁文字顏色，以及按鈕顏色

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,13 +5,13 @@ layout: default
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center orange-text">{{ site.title }}</h1>
+      <h1 class="header center orange-text text-accent-5">{{ site.title }}</h1>
       <div class="row center">
         <h5 class="header col s12 light">{{ content }}</h5>
       </div>
 
       <div class="row center">
-        <a href="{{ site.votingurl | escape }}" id="download-button" class="btn-large waves-effect waves-light orange" target="_blank">點我投票</a>
+        <a href="{{ site.votingurl | escape }}" id="download-button" class="btn-large waves-effect waves-light orange accent-5" target="_blank">點我投票</a>
       </div>
       <br><br>
 
