新增報名button位置，然後調整icon字重

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,11 +10,6 @@ layout: default
         <h5 class="header col s12 light">{{ content }}</h5>
       </div>
 
-      <div class="row center">
-        <a href="{{ site.votingurl | escape }}" id="download-button" class="btn-large waves-effect waves-light orange accent-5" target="_blank">點我投票</a>
-      </div>
-      <br><br>
-
     </div>
   </div>
 
@@ -26,7 +21,7 @@ layout: default
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text text-darken-3"><i class="material-icons">theaters</i></h2>
-            <h5 class="center">參賽作品</h5>
+            <h5 class="center">比賽內容</h5>
 
             <p class="center">以下主題二擇一，製作6分鐘以內短片<br>(1)介紹及分析自選經濟議題<br>(2)以高中生為對象介紹本系特色</p>
           </div>
@@ -37,7 +32,7 @@ layout: default
             <h2 class="center light-blue-text text-darken-3"><i class="material-icons">local_atm</i></h2>
             <h5 class="center">獎金</h5>
 
-            <p class="light" style="text-align:center">
+            <p class="center" style="text-align:center">
               第一名： 八千元（一組）<br>
               第二名： 五千元（一組）<br>
               第三名： 三千元（一組）</p>
@@ -48,13 +43,21 @@ layout: default
           <div class="icon-block">
             <h2 class="center light-blue-text text-darken-3"><i class="material-icons">school</i></h2>
             <h5 class="center">迷你課程</h5>
-            <p class="light">配搭
+            <p class="center">配搭
               <a href="https://tpemartin.github.io/Multimedia-Publication-of-Economic-Issues/" target="_blank">「經濟時事與多媒體」</a>課程做中學，拿學分又拿獎金。</p>
           </div>
         </div>
       </div>
 
+      <br>
+      <!-- the call to action button  -->
+      <div class="row center">
+        <a href="{{ site.registrationurl | escape }}" id="download-button" class="btn-large waves-effect waves-light orange accent-5" target="_blank">點我報名</a>
+      </div>
+
     </div>
+
+    <br>
 
     </div>
     <div style="background: #ddd">
