更新影片內容要求

--- a/_layouts/_home.html
+++ b/_layouts/_home.html
@@ -28,7 +28,7 @@ layout: default
             <h2 class="center light-blue-text"><i class="material-icons">theaters</i></h2>
             <h5 class="center">參賽作品</h5>
 
-            <p class="center">介紹及分析自選經濟議題，製作6分鐘以內短片</p>
+            <p class="center">製作6分鐘以內短片,介紹及分析自選經濟議題</p>
           </div>
         </div>
 
