首頁icon斷行（利於易讀性）

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@ layout: default
             <h2 class="center light-blue-text text-darken-3"><i class="material-icons">school</i></h2>
             <h5 class="center">迷你課程</h5>
             <p class="center">配搭
-              <a href="https://tpemartin.github.io/Multimedia-Publication-of-Economic-Issues/" target="_blank">「經濟時事與多媒體」</a>課程做中學，拿學分又拿獎金。</p>
+              <a href="https://tpemartin.github.io/Multimedia-Publication-of-Economic-Issues/" target="_blank">「經濟時事與多媒體」</a>課程做中學，<br>拿學分又拿獎金。</p>
           </div>
         </div>
       </div>
