--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,6 +54,21 @@ layout: default
       <div class="row center">
         <a href="{{ site.registrationurl | escape }}" id="download-button" class="btn-large waves-effect waves-light orange accent-5" target="_blank">點我報名</a>
       </div>
+      <div class="row center">
+        <h3>2017 得獎作品</h3>
+        <div>
+            <h4>冠軍</h4>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/4PvuCMxDLh8?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+
+        <div>
+          <h4>亞軍</h4>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/9_mvm2R8fiQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        <div>
+            <h4>季軍</h4>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/8Pya7Qp5nAM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
 
     </div>
 
